Academic Projects/Active/CMSC 430/4/parser.output
State 4 conflicts: 1 shift/reduce
State 15 conflicts: 13 shift/reduce
State 46 conflicts: 1 shift/reduce
State 54 conflicts: 4 shift/reduce
State 56 conflicts: 4 shift/reduce
State 84 conflicts: 4 shift/reduce, 7 reduce/reduce
State 86 conflicts: 1 shift/reduce
State 91 conflicts: 1 shift/reduce
State 92 conflicts: 13 shift/reduce
State 99 conflicts: 1 shift/reduce
State 131 conflicts: 13 shift/reduce
State 133 conflicts: 13 shift/reduce
State 138 conflicts: 13 shift/reduce


Grammar

    0 $accept: function $end

    1 function: function_header optional_variable body

    2 function_header: FUNCTION IDENTIFIER parameters RETURNS type ';'
    3                | error

    4 parameters: parameters ',' parameter
    5           | parameter
    6           | ε

    7 parameter: IDENTIFIER ':' type

    8 optional_variable: optional_variable variable ';'
    9                  | variable ';'
   10                  | error
   11                  | ε

   12 variable: IDENTIFIER ':' type IS statement
   13         | IDENTIFIER ':' LIST OF type IS list

   14 type: INTEGER
   15     | CHARACTER
   16     | REAL
   17     | error

   18 body: BEGIN_ statement_ END ';'

   19 statement_: statement_ statement ';'
   20           | statement ';'
   21           | error
   22           | ε

   23 statement: expression
   24          | WHEN condition_list ',' expression ':' expression
   25          | WHEN error
   26          | SWITCH_descent
   27          | IF_descent
   28          | FOLD direction operator list ENDFOLD

   29 SWITCH_descent: SWITCH expression IS cases OTHERS ARROW statement_ ENDSWITCH
   30               | error

   31 IF_descent: IF condition_list THEN statement_ ELSIF_descent ELSE statement_ ENDIF

   32 ELSIF_descent: ELSIF condition_list THEN statement_ ELSIF_descent
   33              | error
   34              | ε

   35 direction: LEFT
   36          | RIGHT

   37 operator: ADDOP
   38         | MULOP

   39 cases: cases case
   40      | case
   41      | ε

   42 case: CASE INT_LITERAL ARROW statement ';'
   43     | CASE error

   44 condition_list: condition_list ANDOP condition
   45               | condition_list OROP condition
   46               | condition

   47 condition: NOTOP relation
   48          | relation

   49 relation: '(' condition ')'
   50         | expression RELOP expression
   51         | expression

   52 list: '(' expressions ')'

   53 expressions: expressions ',' expression
   54            | expression

   55 expression: expression ADDOP term
   56           | term

   57 term: term MULOP primary
   58     | term MODOP primary
   59     | term EXPOP primary
   60     | term RELOP primary
   61     | primary

   62 primary: '(' expression ')'
   63        | NEGOP term
   64        | NOTOP term
   65        | INT_LITERAL
   66        | CHAR_LITERAL
   67        | REAL_LITERAL
   68        | HEX_LITERAL
   69        | IDENTIFIER '(' expression ')'
   70        | IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 49 52 62 69
    ')' (41) 49 52 62 69
    ',' (44) 4 24 53
    ':' (58) 7 12 13 24
    ';' (59) 2 8 9 18 19 20 42
    error (256) 3 10 17 21 25 30 33 43
    INT_LITERAL <type> (258) 42 65
    CHAR_LITERAL <type> (259) 66
    REAL_LITERAL <type> (260) 67
    HEX_LITERAL <type> (261) 68
    RELOP (262) 50 60
    ADDOP (263) 37 55
    ANDOP (264) 44
    MULOP (265) 38 57
    MODOP <type> (266) 58
    NEGOP <type> (267) 63
    EXPOP <type> (268) 59
    IDENTIFIER <iden> (269) 2 7 12 13 69 70
    LEFT (270) 35
    RIGHT (271) 36
    ARROW (272) 29 42
    OROP (273) 45
    NOTOP (274) 47 64
    WHEN (275) 24 25
    BEGIN_ (276) 18
    END (277) 18
    FUNCTION (278) 2
    IS (279) 12 13 29
    LIST (280) 13
    OF (281) 13
    RETURNS (282) 2
    SWITCH (283) 29
    CASE (284) 42 43
    OTHERS (285) 29
    ENDSWITCH (286) 29
    IF (287) 31
    THEN (288) 31 32
    ELSE (289) 31
    ELSIF (290) 32
    ENDIF (291) 31
    FOLD (292) 28
    ENDFOLD (293) 28
    CHARACTER (294) 15
    REAL (295) 16
    INTEGER (296) 14


Nonterminals, with rules where they appear

    $accept (47)
        on left: 0
    function <type> (48)
        on left: 1
        on right: 0
    function_header <type> (49)
        on left: 2 3
        on right: 1
    parameters <type> (50)
        on left: 4 5 6
        on right: 2 4
    parameter <type> (51)
        on left: 7
        on right: 4 5
    optional_variable <type> (52)
        on left: 8 9 10 11
        on right: 1 8
    variable <type> (53)
        on left: 12 13
        on right: 8 9
    type <type> (54)
        on left: 14 15 16 17
        on right: 2 7 12 13
    body <type> (55)
        on left: 18
        on right: 1
    statement_ <type> (56)
        on left: 19 20 21 22
        on right: 18 19 29 31 32
    statement <type> (57)
        on left: 23 24 25 26 27 28
        on right: 12 19 20 42
    SWITCH_descent <type> (58)
        on left: 29 30
        on right: 26
    IF_descent <type> (59)
        on left: 31
        on right: 27
    ELSIF_descent <type> (60)
        on left: 32 33 34
        on right: 31 32
    direction (61)
        on left: 35 36
        on right: 28
    operator (62)
        on left: 37 38
        on right: 28
    cases <type> (63)
        on left: 39 40 41
        on right: 29 39
    case <type> (64)
        on left: 42 43
        on right: 39 40
    condition_list <type> (65)
        on left: 44 45 46
        on right: 24 31 32 44 45
    condition <type> (66)
        on left: 47 48
        on right: 44 45 46 49
    relation <type> (67)
        on left: 49 50 51
        on right: 47 48
    list <type> (68)
        on left: 52
        on right: 13 28
    expressions <type> (69)
        on left: 53 54
        on right: 52 53
    expression <type> (70)
        on left: 55 56
        on right: 23 24 29 50 51 53 54 55 62 69
    term <type> (71)
        on left: 57 58 59 60 61
        on right: 55 56 57 58 59 60 63 64
    primary <type> (72)
        on left: 62 63 64 65 66 67 68 69 70
        on right: 57 58 59 60 61


State 0

    0 $accept: • function $end

    error     shift, and go to state 1
    FUNCTION  shift, and go to state 2

    function         go to state 3
    function_header  go to state 4


State 1

    3 function_header: error •

    $default  reduce using rule 3 (function_header)


State 2

    2 function_header: FUNCTION • IDENTIFIER parameters RETURNS type ';'

    IDENTIFIER  shift, and go to state 5


State 3

    0 $accept: function • $end

    $end  shift, and go to state 6


State 4

    1 function: function_header • optional_variable body

    error       shift, and go to state 7
    IDENTIFIER  shift, and go to state 8

    IDENTIFIER  [reduce using rule 11 (optional_variable)]
    BEGIN_      reduce using rule 11 (optional_variable)

    optional_variable  go to state 9
    variable           go to state 10


State 5

    2 function_header: FUNCTION IDENTIFIER • parameters RETURNS type ';'

    IDENTIFIER  shift, and go to state 11

    $default  reduce using rule 6 (parameters)

    parameters  go to state 12
    parameter   go to state 13


State 6

    0 $accept: function $end •

    $default  accept


State 7

   10 optional_variable: error •

    $default  reduce using rule 10 (optional_variable)


State 8

   12 variable: IDENTIFIER • ':' type IS statement
   13         | IDENTIFIER • ':' LIST OF type IS list

    ':'  shift, and go to state 14


State 9

    1 function: function_header optional_variable • body
    8 optional_variable: optional_variable • variable ';'

    IDENTIFIER  shift, and go to state 8
    BEGIN_      shift, and go to state 15

    variable  go to state 16
    body      go to state 17


State 10

    9 optional_variable: variable • ';'

    ';'  shift, and go to state 18


State 11

    7 parameter: IDENTIFIER • ':' type

    ':'  shift, and go to state 19


State 12

    2 function_header: FUNCTION IDENTIFIER parameters • RETURNS type ';'
    4 parameters: parameters • ',' parameter

    RETURNS  shift, and go to state 20
    ','      shift, and go to state 21


State 13

    5 parameters: parameter •

    $default  reduce using rule 5 (parameters)


State 14

   12 variable: IDENTIFIER ':' • type IS statement
   13         | IDENTIFIER ':' • LIST OF type IS list

    error      shift, and go to state 22
    LIST       shift, and go to state 23
    CHARACTER  shift, and go to state 24
    REAL       shift, and go to state 25
    INTEGER    shift, and go to state 26

    type  go to state 27


State 15

   18 body: BEGIN_ • statement_ END ';'

    error         shift, and go to state 28
    INT_LITERAL   shift, and go to state 29
    CHAR_LITERAL  shift, and go to state 30
    REAL_LITERAL  shift, and go to state 31
    HEX_LITERAL   shift, and go to state 32
    NEGOP         shift, and go to state 33
    IDENTIFIER    shift, and go to state 34
    NOTOP         shift, and go to state 35
    WHEN          shift, and go to state 36
    SWITCH        shift, and go to state 37
    IF            shift, and go to state 38
    FOLD          shift, and go to state 39
    '('           shift, and go to state 40

    error         [reduce using rule 22 (statement_)]
    INT_LITERAL   [reduce using rule 22 (statement_)]
    CHAR_LITERAL  [reduce using rule 22 (statement_)]
    REAL_LITERAL  [reduce using rule 22 (statement_)]
    HEX_LITERAL   [reduce using rule 22 (statement_)]
    NEGOP         [reduce using rule 22 (statement_)]
    IDENTIFIER    [reduce using rule 22 (statement_)]
    NOTOP         [reduce using rule 22 (statement_)]
    WHEN          [reduce using rule 22 (statement_)]
    END           reduce using rule 22 (statement_)
    SWITCH        [reduce using rule 22 (statement_)]
    IF            [reduce using rule 22 (statement_)]
    FOLD          [reduce using rule 22 (statement_)]
    '('           [reduce using rule 22 (statement_)]

    statement_      go to state 41
    statement       go to state 42
    SWITCH_descent  go to state 43
    IF_descent      go to state 44
    expression      go to state 45
    term            go to state 46
    primary         go to state 47


State 16

    8 optional_variable: optional_variable variable • ';'

    ';'  shift, and go to state 48


State 17

    1 function: function_header optional_variable body •

    $default  reduce using rule 1 (function)


State 18

    9 optional_variable: variable ';' •

    $default  reduce using rule 9 (optional_variable)


State 19

    7 parameter: IDENTIFIER ':' • type

    error      shift, and go to state 22
    CHARACTER  shift, and go to state 24
    REAL       shift, and go to state 25
    INTEGER    shift, and go to state 26

    type  go to state 49


State 20

    2 function_header: FUNCTION IDENTIFIER parameters RETURNS • type ';'

    error      shift, and go to state 22
    CHARACTER  shift, and go to state 24
    REAL       shift, and go to state 25
    INTEGER    shift, and go to state 26

    type  go to state 50


State 21

    4 parameters: parameters ',' • parameter

    IDENTIFIER  shift, and go to state 11

    parameter  go to state 51


State 22

   17 type: error •

    $default  reduce using rule 17 (type)


State 23

   13 variable: IDENTIFIER ':' LIST • OF type IS list

    OF  shift, and go to state 52


State 24

   15 type: CHARACTER •

    $default  reduce using rule 15 (type)


State 25

   16 type: REAL •

    $default  reduce using rule 16 (type)


State 26

   14 type: INTEGER •

    $default  reduce using rule 14 (type)


State 27

   12 variable: IDENTIFIER ':' type • IS statement

    IS  shift, and go to state 53


State 28

   21 statement_: error •
   30 SWITCH_descent: error •

    ';'       reduce using rule 30 (SWITCH_descent)
    $default  reduce using rule 21 (statement_)


State 29

   65 primary: INT_LITERAL •

    $default  reduce using rule 65 (primary)


State 30

   66 primary: CHAR_LITERAL •

    $default  reduce using rule 66 (primary)


State 31

   67 primary: REAL_LITERAL •

    $default  reduce using rule 67 (primary)


State 32

   68 primary: HEX_LITERAL •

    $default  reduce using rule 68 (primary)


State 33

   63 primary: NEGOP • term

    INT_LITERAL   shift, and go to state 29
    CHAR_LITERAL  shift, and go to state 30
    REAL_LITERAL  shift, and go to state 31
    HEX_LITERAL   shift, and go to state 32
    NEGOP         shift, and go to state 33
    IDENTIFIER    shift, and go to state 34
    NOTOP         shift, and go to state 35
    '('           shift, and go to state 40

    term     go to state 54
    primary  go to state 47


State 34

   69 primary: IDENTIFIER • '(' expression ')'
   70        | IDENTIFIER •

    '('  shift, and go to state 55

    $default  reduce using rule 70 (primary)


State 35

   64 primary: NOTOP • term

    INT_LITERAL   shift, and go to state 29
    CHAR_LITERAL  shift, and go to state 30
    REAL_LITERAL  shift, and go to state 31
    HEX_LITERAL   shift, and go to state 32
    NEGOP         shift, and go to state 33
    IDENTIFIER    shift, and go to state 34
    NOTOP         shift, and go to state 35
    '('           shift, and go to state 40

    term     go to state 56
    primary  go to state 47


State 36

   24 statement: WHEN • condition_list ',' expression ':' expression
   25          | WHEN • error

    error         shift, and go to state 57
    INT_LITERAL   shift, and go to state 29
    CHAR_LITERAL  shift, and go to state 30
    REAL_LITERAL  shift, and go to state 31
    HEX_LITERAL   shift, and go to state 32
    NEGOP         shift, and go to state 33
    IDENTIFIER    shift, and go to state 34
    NOTOP         shift, and go to state 58
    '('           shift, and go to state 59

    condition_list  go to state 60
    condition       go to state 61
    relation        go to state 62
    expression      go to state 63
    term            go to state 46
    primary         go to state 47


State 37

   29 SWITCH_descent: SWITCH • expression IS cases OTHERS ARROW statement_ ENDSWITCH

    INT_LITERAL   shift, and go to state 29
    CHAR_LITERAL  shift, and go to state 30
    REAL_LITERAL  shift, and go to state 31
    HEX_LITERAL   shift, and go to state 32
    NEGOP         shift, and go to state 33
    IDENTIFIER    shift, and go to state 34
    NOTOP         shift, and go to state 35
    '('           shift, and go to state 40

    expression  go to state 64
    term        go to state 46
    primary     go to state 47


State 38

   31 IF_descent: IF • condition_list THEN statement_ ELSIF_descent ELSE statement_ ENDIF

    INT_LITERAL   shift, and go to state 29
    CHAR_LITERAL  shift, and go to state 30
    REAL_LITERAL  shift, and go to state 31
    HEX_LITERAL   shift, and go to state 32
    NEGOP         shift, and go to state 33
    IDENTIFIER    shift, and go to state 34
    NOTOP         shift, and go to state 58
    '('           shift, and go to state 59

    condition_list  go to state 65
    condition       go to state 61
    relation        go to state 62
    expression      go to state 63
    term            go to state 46
    primary         go to state 47


State 39

   28 statement: FOLD • direction operator list ENDFOLD

    LEFT   shift, and go to state 66
    RIGHT  shift, and go to state 67

    direction  go to state 68


State 40

   62 primary: '(' • expression ')'

    INT_LITERAL   shift, and go to state 29
    CHAR_LITERAL  shift, and go to state 30
    REAL_LITERAL  shift, and go to state 31
    HEX_LITERAL   shift, and go to state 32
    NEGOP         shift, and go to state 33
    IDENTIFIER    shift, and go to state 34
    NOTOP         shift, and go to state 35
    '('           shift, and go to state 40

    expression  go to state 69
    term        go to state 46
    primary     go to state 47


State 41

   18 body: BEGIN_ statement_ • END ';'
   19 statement_: statement_ • statement ';'

    error         shift, and go to state 70
    INT_LITERAL   shift, and go to state 29
    CHAR_LITERAL  shift, and go to state 30
    REAL_LITERAL  shift, and go to state 31
    HEX_LITERAL   shift, and go to state 32
    NEGOP         shift, and go to state 33
    IDENTIFIER    shift, and go to state 34
    NOTOP         shift, and go to state 35
    WHEN          shift, and go to state 36
    END           shift, and go to state 71
    SWITCH        shift, and go to state 37
    IF            shift, and go to state 38
    FOLD          shift, and go to state 39
    '('           shift, and go to state 40

    statement       go to state 72
    SWITCH_descent  go to state 43
    IF_descent      go to state 44
    expression      go to state 45
    term            go to state 46
    primary         go to state 47


State 42

   20 statement_: statement • ';'

    ';'  shift, and go to state 73


State 43

   26 statement: SWITCH_descent •

    $default  reduce using rule 26 (statement)


State 44

   27 statement: IF_descent •

    $default  reduce using rule 27 (statement)


State 45

   23 statement: expression •
   55 expression: expression • ADDOP term

    ADDOP  shift, and go to state 74

    $default  reduce using rule 23 (statement)


State 46

   56 expression: term •
   57 term: term • MULOP primary
   58     | term • MODOP primary
   59     | term • EXPOP primary
   60     | term • RELOP primary

    RELOP  shift, and go to state 75
    MULOP  shift, and go to state 76
    MODOP  shift, and go to state 77
    EXPOP  shift, and go to state 78

    RELOP     [reduce using rule 56 (expression)]
    $default  reduce using rule 56 (expression)


State 47

   61 term: primary •

    $default  reduce using rule 61 (term)


State 48

    8 optional_variable: optional_variable variable ';' •

    $default  reduce using rule 8 (optional_variable)


State 49

    7 parameter: IDENTIFIER ':' type •

    $default  reduce using rule 7 (parameter)


State 50

    2 function_header: FUNCTION IDENTIFIER parameters RETURNS type • ';'

    ';'  shift, and go to state 79


State 51

    4 parameters: parameters ',' parameter •

    $default  reduce using rule 4 (parameters)


State 52

   13 variable: IDENTIFIER ':' LIST OF • type IS list

    error      shift, and go to state 22
    CHARACTER  shift, and go to state 24
    REAL       shift, and go to state 25
    INTEGER    shift, and go to state 26

    type  go to state 80


State 53

   12 variable: IDENTIFIER ':' type IS • statement

    error         shift, and go to state 70
    INT_LITERAL   shift, and go to state 29
    CHAR_LITERAL  shift, and go to state 30
    REAL_LITERAL  shift, and go to state 31
    HEX_LITERAL   shift, and go to state 32
    NEGOP         shift, and go to state 33
    IDENTIFIER    shift, and go to state 34
    NOTOP         shift, and go to state 35
    WHEN          shift, and go to state 36
    SWITCH        shift, and go to state 37
    IF            shift, and go to state 38
    FOLD          shift, and go to state 39
    '('           shift, and go to state 40

    statement       go to state 81
    SWITCH_descent  go to state 43
    IF_descent      go to state 44
    expression      go to state 45
    term            go to state 46
    primary         go to state 47


State 54

   57 term: term • MULOP primary
   58     | term • MODOP primary
   59     | term • EXPOP primary
   60     | term • RELOP primary
   63 primary: NEGOP term •

    RELOP  shift, and go to state 75
    MULOP  shift, and go to state 76
    MODOP  shift, and go to state 77
    EXPOP  shift, and go to state 78

    RELOP     [reduce using rule 63 (primary)]
    MULOP     [reduce using rule 63 (primary)]
    MODOP     [reduce using rule 63 (primary)]
    EXPOP     [reduce using rule 63 (primary)]
    $default  reduce using rule 63 (primary)


State 55

   69 primary: IDENTIFIER '(' • expression ')'

    INT_LITERAL   shift, and go to state 29
    CHAR_LITERAL  shift, and go to state 30
    REAL_LITERAL  shift, and go to state 31
    HEX_LITERAL   shift, and go to state 32
    NEGOP         shift, and go to state 33
    IDENTIFIER    shift, and go to state 34
    NOTOP         shift, and go to state 35
    '('           shift, and go to state 40

    expression  go to state 82
    term        go to state 46
    primary     go to state 47


State 56

   57 term: term • MULOP primary
   58     | term • MODOP primary
   59     | term • EXPOP primary
   60     | term • RELOP primary
   64 primary: NOTOP term •

    RELOP  shift, and go to state 75
    MULOP  shift, and go to state 76
    MODOP  shift, and go to state 77
    EXPOP  shift, and go to state 78

    RELOP     [reduce using rule 64 (primary)]
    MULOP     [reduce using rule 64 (primary)]
    MODOP     [reduce using rule 64 (primary)]
    EXPOP     [reduce using rule 64 (primary)]
    $default  reduce using rule 64 (primary)


State 57

   25 statement: WHEN error •

    $default  reduce using rule 25 (statement)


State 58

   47 condition: NOTOP • relation
   64 primary: NOTOP • term

    INT_LITERAL   shift, and go to state 29
    CHAR_LITERAL  shift, and go to state 30
    REAL_LITERAL  shift, and go to state 31
    HEX_LITERAL   shift, and go to state 32
    NEGOP         shift, and go to state 33
    IDENTIFIER    shift, and go to state 34
    NOTOP         shift, and go to state 35
    '('           shift, and go to state 59

    relation    go to state 83
    expression  go to state 63
    term        go to state 84
    primary     go to state 47


State 59

   49 relation: '(' • condition ')'
   62 primary: '(' • expression ')'

    INT_LITERAL   shift, and go to state 29
    CHAR_LITERAL  shift, and go to state 30
    REAL_LITERAL  shift, and go to state 31
    HEX_LITERAL   shift, and go to state 32
    NEGOP         shift, and go to state 33
    IDENTIFIER    shift, and go to state 34
    NOTOP         shift, and go to state 58
    '('           shift, and go to state 59

    condition   go to state 85
    relation    go to state 62
    expression  go to state 86
    term        go to state 46
    primary     go to state 47


State 60

   24 statement: WHEN condition_list • ',' expression ':' expression
   44 condition_list: condition_list • ANDOP condition
   45               | condition_list • OROP condition

    ANDOP  shift, and go to state 87
    OROP   shift, and go to state 88
    ','    shift, and go to state 89


State 61

   46 condition_list: condition •

    $default  reduce using rule 46 (condition_list)


State 62

   48 condition: relation •

    $default  reduce using rule 48 (condition)


State 63

   50 relation: expression • RELOP expression
   51         | expression •
   55 expression: expression • ADDOP term

    RELOP  shift, and go to state 90
    ADDOP  shift, and go to state 74

    $default  reduce using rule 51 (relation)


State 64

   29 SWITCH_descent: SWITCH expression • IS cases OTHERS ARROW statement_ ENDSWITCH
   55 expression: expression • ADDOP term

    ADDOP  shift, and go to state 74
    IS     shift, and go to state 91


State 65

   31 IF_descent: IF condition_list • THEN statement_ ELSIF_descent ELSE statement_ ENDIF
   44 condition_list: condition_list • ANDOP condition
   45               | condition_list • OROP condition

    ANDOP  shift, and go to state 87
    OROP   shift, and go to state 88
    THEN   shift, and go to state 92


State 66

   35 direction: LEFT •

    $default  reduce using rule 35 (direction)


State 67

   36 direction: RIGHT •

    $default  reduce using rule 36 (direction)


State 68

   28 statement: FOLD direction • operator list ENDFOLD

    ADDOP  shift, and go to state 93
    MULOP  shift, and go to state 94

    operator  go to state 95


State 69

   55 expression: expression • ADDOP term
   62 primary: '(' expression • ')'

    ADDOP  shift, and go to state 74
    ')'    shift, and go to state 96


State 70

   30 SWITCH_descent: error •

    $default  reduce using rule 30 (SWITCH_descent)


State 71

   18 body: BEGIN_ statement_ END • ';'

    ';'  shift, and go to state 97


State 72

   19 statement_: statement_ statement • ';'

    ';'  shift, and go to state 98


State 73

   20 statement_: statement ';' •

    $default  reduce using rule 20 (statement_)


State 74

   55 expression: expression ADDOP • term

    INT_LITERAL   shift, and go to state 29
    CHAR_LITERAL  shift, and go to state 30
    REAL_LITERAL  shift, and go to state 31
    HEX_LITERAL   shift, and go to state 32
    NEGOP         shift, and go to state 33
    IDENTIFIER    shift, and go to state 34
    NOTOP         shift, and go to state 35
    '('           shift, and go to state 40

    term     go to state 99
    primary  go to state 47


State 75

   60 term: term RELOP • primary

    INT_LITERAL   shift, and go to state 29
    CHAR_LITERAL  shift, and go to state 30
    REAL_LITERAL  shift, and go to state 31
    HEX_LITERAL   shift, and go to state 32
    NEGOP         shift, and go to state 33
    IDENTIFIER    shift, and go to state 34
    NOTOP         shift, and go to state 35
    '('           shift, and go to state 40

    primary  go to state 100


State 76

   57 term: term MULOP • primary

    INT_LITERAL   shift, and go to state 29
    CHAR_LITERAL  shift, and go to state 30
    REAL_LITERAL  shift, and go to state 31
    HEX_LITERAL   shift, and go to state 32
    NEGOP         shift, and go to state 33
    IDENTIFIER    shift, and go to state 34
    NOTOP         shift, and go to state 35
    '('           shift, and go to state 40

    primary  go to state 101


State 77

   58 term: term MODOP • primary

    INT_LITERAL   shift, and go to state 29
    CHAR_LITERAL  shift, and go to state 30
    REAL_LITERAL  shift, and go to state 31
    HEX_LITERAL   shift, and go to state 32
    NEGOP         shift, and go to state 33
    IDENTIFIER    shift, and go to state 34
    NOTOP         shift, and go to state 35
    '('           shift, and go to state 40

    primary  go to state 102


State 78

   59 term: term EXPOP • primary

    INT_LITERAL   shift, and go to state 29
    CHAR_LITERAL  shift, and go to state 30
    REAL_LITERAL  shift, and go to state 31
    HEX_LITERAL   shift, and go to state 32
    NEGOP         shift, and go to state 33
    IDENTIFIER    shift, and go to state 34
    NOTOP         shift, and go to state 35
    '('           shift, and go to state 40

    primary  go to state 103


State 79

    2 function_header: FUNCTION IDENTIFIER parameters RETURNS type ';' •

    $default  reduce using rule 2 (function_header)


State 80

   13 variable: IDENTIFIER ':' LIST OF type • IS list

    IS  shift, and go to state 104


State 81

   12 variable: IDENTIFIER ':' type IS statement •

    $default  reduce using rule 12 (variable)


State 82

   55 expression: expression • ADDOP term
   69 primary: IDENTIFIER '(' expression • ')'

    ADDOP  shift, and go to state 74
    ')'    shift, and go to state 105


State 83

   47 condition: NOTOP relation •

    $default  reduce using rule 47 (condition)


State 84

   56 expression: term •
   57 term: term • MULOP primary
   58     | term • MODOP primary
   59     | term • EXPOP primary
   60     | term • RELOP primary
   64 primary: NOTOP term •

    RELOP  shift, and go to state 75
    MULOP  shift, and go to state 76
    MODOP  shift, and go to state 77
    EXPOP  shift, and go to state 78

    RELOP     [reduce using rule 56 (expression)]
    RELOP     [reduce using rule 64 (primary)]
    ADDOP     reduce using rule 56 (expression)
    ADDOP     [reduce using rule 64 (primary)]
    ANDOP     reduce using rule 56 (expression)
    ANDOP     [reduce using rule 64 (primary)]
    MULOP     [reduce using rule 64 (primary)]
    MODOP     [reduce using rule 64 (primary)]
    EXPOP     [reduce using rule 64 (primary)]
    OROP      reduce using rule 56 (expression)
    OROP      [reduce using rule 64 (primary)]
    THEN      reduce using rule 56 (expression)
    THEN      [reduce using rule 64 (primary)]
    ','       reduce using rule 56 (expression)
    ','       [reduce using rule 64 (primary)]
    ')'       reduce using rule 56 (expression)
    ')'       [reduce using rule 64 (primary)]
    $default  reduce using rule 56 (expression)


State 85

   49 relation: '(' condition • ')'

    ')'  shift, and go to state 106


State 86

   50 relation: expression • RELOP expression
   51         | expression •
   55 expression: expression • ADDOP term
   62 primary: '(' expression • ')'

    RELOP  shift, and go to state 90
    ADDOP  shift, and go to state 74
    ')'    shift, and go to state 96

    ')'  [reduce using rule 51 (relation)]


State 87

   44 condition_list: condition_list ANDOP • condition

    INT_LITERAL   shift, and go to state 29
    CHAR_LITERAL  shift, and go to state 30
    REAL_LITERAL  shift, and go to state 31
    HEX_LITERAL   shift, and go to state 32
    NEGOP         shift, and go to state 33
    IDENTIFIER    shift, and go to state 34
    NOTOP         shift, and go to state 58
    '('           shift, and go to state 59

    condition   go to state 107
    relation    go to state 62
    expression  go to state 63
    term        go to state 46
    primary     go to state 47


State 88

   45 condition_list: condition_list OROP • condition

    INT_LITERAL   shift, and go to state 29
    CHAR_LITERAL  shift, and go to state 30
    REAL_LITERAL  shift, and go to state 31
    HEX_LITERAL   shift, and go to state 32
    NEGOP         shift, and go to state 33
    IDENTIFIER    shift, and go to state 34
    NOTOP         shift, and go to state 58
    '('           shift, and go to state 59

    condition   go to state 108
    relation    go to state 62
    expression  go to state 63
    term        go to state 46
    primary     go to state 47


State 89

   24 statement: WHEN condition_list ',' • expression ':' expression

    INT_LITERAL   shift, and go to state 29
    CHAR_LITERAL  shift, and go to state 30
    REAL_LITERAL  shift, and go to state 31
    HEX_LITERAL   shift, and go to state 32
    NEGOP         shift, and go to state 33
    IDENTIFIER    shift, and go to state 34
    NOTOP         shift, and go to state 35
    '('           shift, and go to state 40

    expression  go to state 109
    term        go to state 46
    primary     go to state 47


State 90

   50 relation: expression RELOP • expression

    INT_LITERAL   shift, and go to state 29
    CHAR_LITERAL  shift, and go to state 30
    REAL_LITERAL  shift, and go to state 31
    HEX_LITERAL   shift, and go to state 32
    NEGOP         shift, and go to state 33
    IDENTIFIER    shift, and go to state 34
    NOTOP         shift, and go to state 35
    '('           shift, and go to state 40

    expression  go to state 110
    term        go to state 46
    primary     go to state 47


State 91

   29 SWITCH_descent: SWITCH expression IS • cases OTHERS ARROW statement_ ENDSWITCH

    CASE  shift, and go to state 111

    CASE      [reduce using rule 41 (cases)]
    $default  reduce using rule 41 (cases)

    cases  go to state 112
    case   go to state 113


State 92

   31 IF_descent: IF condition_list THEN • statement_ ELSIF_descent ELSE statement_ ENDIF

    error         shift, and go to state 28
    INT_LITERAL   shift, and go to state 29
    CHAR_LITERAL  shift, and go to state 30
    REAL_LITERAL  shift, and go to state 31
    HEX_LITERAL   shift, and go to state 32
    NEGOP         shift, and go to state 33
    IDENTIFIER    shift, and go to state 34
    NOTOP         shift, and go to state 35
    WHEN          shift, and go to state 36
    SWITCH        shift, and go to state 37
    IF            shift, and go to state 38
    FOLD          shift, and go to state 39
    '('           shift, and go to state 40

    error         [reduce using rule 22 (statement_)]
    INT_LITERAL   [reduce using rule 22 (statement_)]
    CHAR_LITERAL  [reduce using rule 22 (statement_)]
    REAL_LITERAL  [reduce using rule 22 (statement_)]
    HEX_LITERAL   [reduce using rule 22 (statement_)]
    NEGOP         [reduce using rule 22 (statement_)]
    IDENTIFIER    [reduce using rule 22 (statement_)]
    NOTOP         [reduce using rule 22 (statement_)]
    WHEN          [reduce using rule 22 (statement_)]
    SWITCH        [reduce using rule 22 (statement_)]
    IF            [reduce using rule 22 (statement_)]
    ELSE          reduce using rule 22 (statement_)
    ELSIF         reduce using rule 22 (statement_)
    FOLD          [reduce using rule 22 (statement_)]
    '('           [reduce using rule 22 (statement_)]

    statement_      go to state 114
    statement       go to state 42
    SWITCH_descent  go to state 43
    IF_descent      go to state 44
    expression      go to state 45
    term            go to state 46
    primary         go to state 47


State 93

   37 operator: ADDOP •

    $default  reduce using rule 37 (operator)


State 94

   38 operator: MULOP •

    $default  reduce using rule 38 (operator)


State 95

   28 statement: FOLD direction operator • list ENDFOLD

    '('  shift, and go to state 115

    list  go to state 116


State 96

   62 primary: '(' expression ')' •

    $default  reduce using rule 62 (primary)


State 97

   18 body: BEGIN_ statement_ END ';' •

    $default  reduce using rule 18 (body)


State 98

   19 statement_: statement_ statement ';' •

    $default  reduce using rule 19 (statement_)


State 99

   55 expression: expression ADDOP term •
   57 term: term • MULOP primary
   58     | term • MODOP primary
   59     | term • EXPOP primary
   60     | term • RELOP primary

    RELOP  shift, and go to state 75
    MULOP  shift, and go to state 76
    MODOP  shift, and go to state 77
    EXPOP  shift, and go to state 78

    RELOP     [reduce using rule 55 (expression)]
    $default  reduce using rule 55 (expression)


State 100

   60 term: term RELOP primary •

    $default  reduce using rule 60 (term)


State 101

   57 term: term MULOP primary •

    $default  reduce using rule 57 (term)


State 102

   58 term: term MODOP primary •

    $default  reduce using rule 58 (term)


State 103

   59 term: term EXPOP primary •

    $default  reduce using rule 59 (term)


State 104

   13 variable: IDENTIFIER ':' LIST OF type IS • list

    '('  shift, and go to state 115

    list  go to state 117


State 105

   69 primary: IDENTIFIER '(' expression ')' •

    $default  reduce using rule 69 (primary)


State 106

   49 relation: '(' condition ')' •

    $default  reduce using rule 49 (relation)


State 107

   44 condition_list: condition_list ANDOP condition •

    $default  reduce using rule 44 (condition_list)


State 108

   45 condition_list: condition_list OROP condition •

    $default  reduce using rule 45 (condition_list)


State 109

   24 statement: WHEN condition_list ',' expression • ':' expression
   55 expression: expression • ADDOP term

    ADDOP  shift, and go to state 74
    ':'    shift, and go to state 118


State 110

   50 relation: expression RELOP expression •
   55 expression: expression • ADDOP term

    ADDOP  shift, and go to state 74

    $default  reduce using rule 50 (relation)


State 111

   42 case: CASE • INT_LITERAL ARROW statement ';'
   43     | CASE • error

    error        shift, and go to state 119
    INT_LITERAL  shift, and go to state 120


State 112
